--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li class="list-nav" id="show-hover">Promos
           <ul class="show">
             <li><a href="#Hoteles" class="show-list">Hoteles</a></li>
-            <li><a href="" class="show-list">Tours</a></li>
+            <li><a href="#Tours" class="show-list">Tours</a></li>
             <li><a href="" class="show-list">Actividades</a></li>
           </ul>
         </li>
@@ -178,7 +178,7 @@
     </div>    
   </div>
 
-  <h1 id="Hoteles">Tours</h1>
+  <h1 id="Tours">Tours</h1>
 
   <h2>Roatan</h2>
 
